--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         </dependencies>
     </dependencyManagement>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <okhttp.version>3.9.0</okhttp.version>
         <javax.json.version>1.1</javax.json.version>
         <osgi.version>6.0.0</osgi.version>
